docs/apache-airflow/2.10.0/_sources/_api/airflow/example_dags/index.rst.txt
:py:mod:`airflow.example_dags`
==============================

.. py:module:: airflow.example_dags


Subpackages
-----------
.. toctree::
   :titlesonly:
   :maxdepth: 3

   libs/index.rst
   plugins/index.rst
   subdags/index.rst


Submodules
----------
.. toctree::
   :titlesonly:
   :maxdepth: 1

   example_bash_decorator/index.rst
   example_bash_operator/index.rst
   example_branch_datetime_operator/index.rst
   example_branch_day_of_week_operator/index.rst
   example_branch_labels/index.rst
   example_branch_operator/index.rst
   example_branch_operator_decorator/index.rst
   example_branch_python_dop_operator_3/index.rst
   example_complex/index.rst
   example_dataset_alias/index.rst
   example_dataset_alias_with_no_taskflow/index.rst
   example_datasets/index.rst
   example_display_name/index.rst
   example_dynamic_task_mapping/index.rst
   example_dynamic_task_mapping_with_no_taskflow_operators/index.rst
   example_external_task_marker_dag/index.rst
   example_inlet_event_extra/index.rst
   example_kubernetes_executor/index.rst
   example_latest_only/index.rst
   example_latest_only_with_trigger/index.rst
   example_local_kubernetes_executor/index.rst
   example_nested_branch_dag/index.rst
   example_outlet_event_extra/index.rst
   example_params_trigger_ui/index.rst
   example_params_ui_tutorial/index.rst
   example_passing_params_via_test_command/index.rst
   example_python_decorator/index.rst
   example_python_operator/index.rst
   example_sensor_decorator/index.rst
   example_sensors/index.rst
   example_setup_teardown/index.rst
   example_setup_teardown_taskflow/index.rst
   example_short_circuit_decorator/index.rst
   example_short_circuit_operator/index.rst
   example_skip_dag/index.rst
   example_subdag_operator/index.rst
   example_task_group/index.rst
   example_task_group_decorator/index.rst
   example_time_delta_sensor_async/index.rst
   example_trigger_controller_dag/index.rst
   example_trigger_target_dag/index.rst
   example_workday_timetable/index.rst
   example_xcom/index.rst
   example_xcomargs/index.rst
   tutorial/index.rst
   tutorial_dag/index.rst
   tutorial_objectstorage/index.rst
   tutorial_taskflow_api/index.rst
   tutorial_taskflow_api_virtualenv/index.rst


